deleted token id

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GITHUB_URL="https://api.github.com"
-REACT_APP_GITHUB_TOKEN="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"
+REACT_APP_GITHUB_TOKEN=""
